@@ -1851,12 +1851,14 @@ elseif ($srctbl == 'dchecks') {
 		'output' => API_OUTPUT_EXTEND
 	));
 	foreach ($result as $dRule) {
-		$dCheck = reset($dRule['dchecks']);
-		$dRule['name'] = $dRule['name'].':'.discovery_check2str($dCheck['type'], $dCheck['key_'], $dCheck['ports']);
-		$action = get_window_opener($dstfrm, $dstfld1, $dCheck[$srcfld1]).(isset($srcfld2) ? get_window_opener($dstfrm, $dstfld2, $dRule[$srcfld2]) : '');
-		$name = new CSpan($dRule['name'], 'link');
-		$name->setAttribute('onclick', $action.' close_window(); return false;');
-		$table->addRow($name);
+		foreach ($dRule['dchecks'] as $dCheck) {
+			$name = $dRule['name'].':'.discovery_check2str($dCheck['type'], $dCheck['key_'], $dCheck['ports']);
+			$action = get_window_opener($dstfrm, $dstfld1, $dCheck[$srcfld1]).
+				(isset($srcfld2) ? get_window_opener($dstfrm, $dstfld2, $name) : '');
+			$name = new CSpan($name, 'link');
+			$name->setAttribute('onclick', $action.' close_window(); return false;');
+			$table->addRow($name);
+		}
 	}
 	$table->show();
 }
